--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,6 +2,9 @@
 <html lang="<%= page.lang || 'zh-CN' %>" data-theme="<%= theme.theme || 'day' %>">
 <%- partial('_partial/head.ejs') %>
 <body class="site-body">
+  <!-- Custom body start injections -->
+  <%- inject_point('body-start') %>
+  
   <!-- Google Analytics -->
   <%- partial('_partial/analytics.ejs') %>
   
@@ -28,6 +31,9 @@
   
   <!-- Scripts -->
   <script src="/js/main.js"></script>
+  
+  <!-- Custom body end injections -->
+  <%- inject_point('body-end') %>
   
   <!-- Custom injections -->
   <%- partial('_partial/injections.ejs') %>
